@@ -88,6 +88,9 @@ IMPROVEMENTS:
 
   ZOOKEEPER-790. Last processed zxid set prematurely while establishing leadership (fpj via breed)
 
+  ZOOKEEPER-821. Add ZooKeeper version information to zkpython (Rich
+  Schumacher via mahadev)
+
 NEW FEATURES:
   ZOOKEEPER-729. Java client API to recursively delete a subtree.
   (Kay Kay via henry)
